--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.5+1
   google_fonts: ^6.3.1
+  getwidget: ^6.0.0
+  loading_animation_widget: ^1.2.1
+  flutter_rating_bar: ^4.0.0
+ 
 
 dev_dependencies:
   flutter_test:
