--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   getwidget: ^6.0.0
   loading_animation_widget: ^1.2.1
   flutter_rating_bar: ^4.0.0
+  url_launcher: ^6.3.1
  
 
 dev_dependencies:
