--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,16 @@ dependencies:
   loading_animation_widget: ^1.2.1
   flutter_rating_bar: ^4.0.0
   url_launcher: ^6.3.1
+  intl: ^0.18.1
+  google_maps_flutter: ^2.5.0
+  shared_preferences: ^2.2.2
+  image_picker: ^1.0.4
+  image_picker_for_web: ^3.0.0
+  pdf: ^3.10.7
+  path_provider: ^2.1.1
+  open_file: ^3.3.2
+  geolocator: ^14.0.2
+  permission_handler: ^11.0.1
  
 
 dev_dependencies:
